--- a/playlist-rank/src/main/resources/application.properties
+++ b/playlist-rank/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=
-spring.data.mongodb.database=
+spring.data.mongodb.uri=mongodb+srv://nambui9812:namdeptrai@cluster0-wptbd.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.database=main
